# mindstream

./: .env_exemple  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml
.circleci/: config.yml
client/: package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
client/src/: Actions.ts  App.tsx  EpicType.ts  Main.tsx  RootEpic.ts  Store.ts  Store.tsx  colors.css  guide-styles.css  guideStyles.ts  index.html  main.tsx  messages.ts  modules.d.ts  reset.css  router.ts  store.tsx
client/src/app/: AppActions.ts  AppEpics.ts  AppReducer.ts  AppState.ts  AppState.tsx  HeaderContainer.tsx  Menu.css  Menu.tsx  MenuContainer.tsx  SideMenuContainer.tsx
client/src/auth/: AuthActions.ts  AuthEpics.ts  AuthReducer.ts  AuthState.tsx  LoginContainer.css  LoginContainer.tsx  LoginScreen.tsx  Signup.ts  SignupContainer.tsx  SignupScreen.tsx
client/src/components/: BaseButton.css  BaseButton.tsx  Empty.css  Empty.tsx  GhostButton.css  GhostButton.tsx  (+16 more)
migrations/2018-04-26-223914_init/: down.sql  up.sql
mobile/: .gitignore  app.json  index.js  package-lock.json  package.json  tsconfig.json  tslint.json
mobile/__tests__/: App-test.tsx
mobile/android/: settings.gradle
mobile/src/: Api.ts  App.tsx  Button.tsx  HeaderRight.tsx  HomeScreen.tsx  HomeStack.tsx  LoginScreen.tsx  MindstreamScreen.tsx  RssSourcesScreen.tsx  SignupScreen.tsx  modules.d.ts
readable/: Dockerfile  package-lock.json  package.json
src/: app_state.rs  assets.rs  assets_compiled.rs  auth.rs  config.rs  db.rs  errors.rs  jwt.rs  lib.rs  login.rs  main.rs  opml.rs  pagination.rs  rss_feeds_job.rs  schema.rs  signup.rs  user.rs  users.rs
src/app/: app_state.rs  config.rs  db.rs  mod.rs
src/auth/: auth.rs  jwt.rs
src/models/: auth_response.rs  login.rs  mod.rs  pagination.rs  readable.rs  rss.rs  rss_feed.rs  rss_feeds_reaction.rs  rss_source.rs  rss_source_category.rs  signup.rs  user.rs  user_rss_feed.rs  user_rss_source.rs
src/repositories/: mod.rs  rss_feeds.rs  rss_sources.rs  rss_sources_categories.rs  users.rs  users_rss_feeds.rs  users_rss_sources.rs
src/rss_feeds/: change_rss_feed_reaction.rs  get_rss_feeds.rs  mercury.rs  mod.rs  rss_feed.rs  rss_feeds_job.rs  rss_feeds_repository.rs  unreaded_feeds.rs  user_rss_feed.rs  users_rss_feeds_repository.rs
src/rss_sources/: add_rss_source.rs  follow_rss_source.rs  get_rss_source.rs  get_rss_sources.rs  get_unfollowed_rss_sources.rs  mod.rs  my_rss_sources.rs  public_rss_sources.rs  rss_service.rs  rss_source.rs  rss_sources_repository.rs  search_rss_sources.rs  unfollow_rss_source.rs  unfollowed_rss_sources.rs  user_rss_source.rs  users_rss_sources_repository.rs
src/services/: mercury.rs  mod.rs  readable.rs  rss_service.rs
src/upload/: mod.rs
src/users/: login.rs  me.rs  mod.rs  signup.rs  user.rs  users.rs
static/: index.html  reset.css
(+165 files in other folders)
