[package]
name = "mindstream"
version = "0.1.0"
authors = ["Egor Berezovskiy <egor.neon@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.18"
futures = "0.1.25"
serde = {version = "1.0.85",features = ["derive"]}
serde_json = "1.0.37"
failure = "0.1.5"
diesel = {version = "1.4.1",features = ["postgres","uuidv07","chrono","serde_json"]}
r2d2 = "0.8.3"
r2d2-diesel = "1.0.0"
uuid = {version = "0.7.2",features = ["serde","v4"]}
chrono = {version = "0.4.6",features = ["serde"]}
dotenv = "0.13.0"
bcrypt = "0.3.0"
jsonwebtoken = "5.0.1"
lazy_static = "1.2.0"
reqwest = "0.9.9"
feed-rs = "0.1.3"
validator = "0.8.0"
validator_derive = "0.8.0"
log = "0.4.6"
env_logger = "0.6.0"
strum = "0.13.0"
strum_macros = "0.13.0"
url = "1.7.2"
envconfig = "0.5.0"
envconfig_derive = "0.5.0"
