[package]
name = "mindstream"
version = "0.1.0"
authors = ["Egor Berezovskiy <egor.neon@gmail.com>"]
description = "Rss reader"
repository = "https://github.com/Wadjetz/mindstream"
readme = "README.md"
license = "MIT"
keywords = ["Rss"]
edition = "2018"
categories = ["web"]
publish = false

[profile.release]
lto = false

[dependencies]
actix-web = "1.0.0-rc"
actix-files = "0.1.0"
futures = "0.1.27"
serde = {version = "1.0.92",features = ["derive"]}
serde_json = "1.0.39"
failure = "0.1.5"
diesel = {version = "1.4.2",features = ["postgres","uuidv07","chrono","serde_json"]}
diesel_migrations = "1.4.0"
r2d2 = "0.8.4"
r2d2-diesel = "1.0.0"
uuid = {version = "0.7.4",features = ["serde","v4"]}
chrono = {version = "0.4.6",features = ["serde"]}
dotenv = "0.14.1"
bcrypt = "0.4.0"
jsonwebtoken = "6.0.1"
reqwest = "0.9.17"
feed-rs = "0.1.3"
validator = "0.8.0"
validator_derive = "0.8.0"
log = "0.4.6"
env_logger = "0.6.1"
strum = "0.15.0"
strum_macros = "0.15.0"
url = "1.7.2"
envconfig = "0.5.1"
envconfig_derive = "0.5.1"
derive-new = "0.5.6"
